--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "local-weather-app",
-  "version": "0.0.0",
+  "name": "localcast-weather",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
